---
title: Package tree - server
---
%% Sorgente: project/mapServer/src/tree/ContinuousNode.java
%% Sorgente: project/mapServer/src/tree/DiscreteNode.java
%% Sorgente: project/mapServer/src/tree/LeafNode.java
%% Sorgente: project/mapServer/src/tree/Node.java
%% Sorgente: project/mapServer/src/tree/RegressionTree.java
%% Sorgente: project/mapServer/src/tree/SplitNode.java
classDiagram
  direction TB
  namespace tree {
    class ContinuousNode
    class DiscreteNode
    class LeafNode
    class Node
    class RegressionTree
    class SplitNode
    class SplitInfo
  }

  class ContinuousNode {
    +ContinuousNode(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int, in attribute: ContinuousAttribute)
    ~setSplitInfo(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int, in attribute: Attribute)
    +testCondition(in value: Object) int
    +toString() String
  }

  class DiscreteNode {
    +DiscreteNode(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int, in attribute: DiscreteAttribute)
    ~setSplitInfo(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int, in attribute: Attribute)
    +testCondition(in value: Object) int
    +toString() String
  }

  class LeafNode {
    -predictedClassValue: Double
    +LeafNode(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int)
    +getPredictedClassValue() Double
    +getNumberOfChildren() int
    +toString() String
  }

  class Node {
    <<abstract>>
    #idNodeCount: int$
    #idNode: int
    #beginExampleIndex: int
    #endExampleIndex: int
    #variance: double
    +Node(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int)
    +getIdNode() int
    +getBeginExampleIndex() int
    +getEndExampleIndex() int
    +getVariance() double
    +getNumberOfChildren() int*
    +toString() String
  }

  class RegressionTree {
    -root: Node
    -childTree: RegressionTree[]
    +RegressionTree()
    +RegressionTree(in trainingSet: Data)
    ~isLeaf(in trainingSet: Data, in begin: int, in end: int, in numberOfExamplesPerLeaf: int) boolean
    -determineBestSplitNode(in trainingSet: Data, in begin: int, in end: int) SplitNode
    ~learnTree(in trainingSet: Data, in begin: int, in end: int, in numberOfExamplesPerLeaf: int)
    +isLeaf() boolean
    +getPredictedClassValue() Double
    +formulateQuery() String
    +getNumberOfChildren() int
    +getChild(in index: int) RegressionTree
    +printTree()
    +printRules()
    -printRules(in current: String)
    +toString() String
    +salva(in nomeFile: String)
    +carica(in nomeFile: String) RegressionTree$
  }

  class SplitNode {
    <<abstract>>
    #attribute: Attribute
    #mapSplit: List~SplitInfo~
    #splitVariance: double
    ~setSplitInfo(in trainingSet: Data, in beginExampelIndex: int, in endExampleIndex: int, in attribute: Attribute)*
    +testCondition(in value: Object) int*
    +SplitNode(in trainingSet: Data, in beginExampleIndex: int, in endExampleIndex: int, in attribute: Attribute)
    ~getAttribute() Attribute
    +getVariance() double
    +getNumberOfChildren() int
    ~getSplitInfo(in child: int) SplitInfo
    +formulateQuery() String
    +toString() String
    +compareTo(in o: SplitNode) int
  }

  class SplitInfo {
    ~splitValue: Object
    ~beginIndex: int
    ~endIndex: int
    ~numberChild: int
    ~comparator: String
    ~SplitInfo(in splitValue: Object, in beginIndex: int, in endIndex: int, in numberChild: int)
    ~SplitInfo(in splitValue: Object, in beginIndex: int, in endIndex: int, in numberChild: int, in comparator: String)
    ~getBeginindex() int
    ~getEndIndex() int
    ~getSplitValue() Object
    +toString() String
    ~getComparator() String
  }

  class Serializable {
    <<interface>>
  }
  class ComparableSplitNode["Comparable&lt;SplitNode&gt;"] {
    <<interface>>
  }
  class Data["data.Data"]
  class Attribute["data.Attribute"]

  LeafNode --|> Node
  SplitNode --|> Node
  ContinuousNode --|> SplitNode
  DiscreteNode --|> SplitNode
  Node ..|> Serializable
  RegressionTree ..|> Serializable
  SplitInfo ..|> Serializable
  SplitNode ..|> ComparableSplitNode
  RegressionTree *-- "0..1" Node : root
  RegressionTree *-- "0..*" RegressionTree : childTree
  SplitNode "1" *-- "0..*" SplitInfo : mapSplit
  SplitNode --> "1" Attribute : attribute
  Node ..> Data
  RegressionTree ..> Data

  note for SplitInfo "Classe interna non statica di SplitNode"
